# prod_itineraries

./: .gitignore  README.md  pyproject.toml
itineraries_final/: README.md  pyproject.toml
itineraries_final/db/: chroma.sqlite3
itineraries_final/src/itineraries_final/: crew.py
itineraries_final/src/itineraries_final/config/: tasks.yaml
itineraries_final/src/itineraries_final/tools/: accuweather_tool.py  perplexity_tool.py  viator_activity_tool.py
src/business_automation_introduction/: crew.py  main.py
src/business_automation_introduction/config/: agents.yaml  tasks.yaml
src/business_automation_introduction/tools/: accuweather_tool.py  civitatis_activity_tool.py  distance_matrix_tool.py  perplexity_tool.py  viator_activity_tool.py
src/itineraries_final/: crew.py  main.py
src/itineraries_final/config/: agents.yaml  tasks.yaml
src/itineraries_final/tools/: accuweather_tool.py  distance_matrix_tool.py  openweather_tool.py  perplexity_tool.py  viator_activity_tool.py
src/itinerary_dev_crew/: crew.py  main.py
src/itinerary_dev_crew/config/: agents.yaml  tasks.yaml
src/itinerary_dev_crew/tools/: accuweather_tool.py  civitatis_activity_tool.py  exasearch_tool.py  serper_tool.py  youtube_tool.py
