[project]
name = "business_automation_introduction"
version = "0.1.0"
description = "business_automation_introduction using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.13.2",
    "crewai[tools]>=0.76.2,<1.0.0",
    "langchain-anthropic>=0.2.4",
    "langchain-openai>=0.2.4",
]

[project.scripts]
business_automation_introduction = "business_automation_introduction.main:run"
run_crew = "business_automation_introduction.main:run"
train = "business_automation_introduction.main:train"
replay = "business_automation_introduction.main:replay"
test = "business_automation_introduction.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
