[project]
name = "itineraries_final"
version = "0.1.0"
description = "itineraries_final using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.8",
]

[project.scripts]
itineraries_final = "itineraries_final.main:run"
run_crew = "itineraries_final.main:run"
train = "itineraries_final.main:train"
replay = "itineraries_final.main:replay"
test = "itineraries_final.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
